@@ -6,6 +6,9 @@ ChangeLog
 
 GIT HEAD
 
+- MIDI RPN/NRPN running status and RPN NULL reset command
+  are now supported (input only). (EXPERIMENTAL)
+
 - Almost complete overhaul on the configure script command
   line options, wrt. installation directories specification,
   eg. --prefix, --bindir, --libdir, --datadir and --mandir.
